# DiscordBot

./: .gitignore  README.md  bot.py  checks.sh  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/: bot.py  textChecks.py  text_checks.py
tests/: test_bot.py
